# litertlm-kmp

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  COMMERCIAL.md  PLAY_STORE.md  PRIVACY.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
benchmarks/: samsung-sm-m558b-sd7gen1.json  xiaomi-pad6-sd870.json
docs/: ARCHITECTURE.md  BACKUP_AND_LOCK_PLAN.md  BENCHMARK_PLAN.md  EMBEDDING_GEMMA_PLAN.md  ENGINE_EXTRACTION_PLAN.md  LANGUAGE_PLAN.md  LOW_END_PLAN.md  RAG_PLAN.md  STUDIO_PLAN.md  VOICE_INPUT_PLAN.md  gource.md  index.html
docs/privacy/: index.html
docs/prototype/: DESIGN.md  index.html
gradle/: libs.versions.toml
lib/: build.gradle.kts  consumer-rules.pro
lib/src/androidMain/: AndroidManifest.xml
sample-app/: README.md  build.gradle.kts  local.properties.template  proguard-rules.pro
sample-app/objectbox-models/: default.json
sample-app/src/main/: AndroidManifest.xml
sample-app/src/main/cpp/: CMakeLists.txt  whisper_jni.c
sample-app/src/main/res/drawable/: ic_launcher_foreground.xml
sample-app/src/main/res/mipmap-anydpi/: ic_launcher_round.xml
sample-app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
sample-app/src/main/res/xml/: network_security_config.xml
src/androidMain/kotlin/com/sagar/aicore/: AndroidHardwareProvider.kt  AndroidNetworkProvider.kt  AndroidPlatformFolders.kt  AndroidSpeechRecognizer.kt  DefaultEngineRegistry.kt  LiteRtLmLocalAiEngine.kt  MediaPipeEmbeddingEngine.kt
src/commonMain/kotlin/com/sagar/aicore/: EmbeddingEngine.kt  EngineDescriptor.kt  EngineRegistry.kt  HardwareProvider.kt  InMemoryModelCatalog.kt  KtorModelManager.kt  LocalAiEngine.kt  ModelCatalog.kt  ModelManager.kt  NetworkProvider.kt  PlatformFolders.kt  Sha256.kt  SpeechRecognizer.kt  ToolSchemaConverter.kt
src/commonTest/kotlin/com/sagar/aicore/: Sha256Test.kt  ToolSchemaConverterTest.kt
(+178 files in other folders)
